add bulma definition / footer

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -1,3 +1,19 @@
 @charset "utf-8";
 
+// Set your brand colors
+$green: #006838;
+
+// Update Bulma's global variables
+$primary: $green;
+
+// Update some of Bulma's component variables
+
+// Update Bulma
 @import "~bulma/bulma.sass";
+
+// Handcrafted CSS
+.centered {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
