--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -17,3 +17,10 @@ $primary: $green;
   max-width: 100%;
   height: auto;
 }
+
+@media (min-width: $navbar-breakpoint) {
+  .centered {
+    display: flex;
+    justify-content: center;
+  }
+}
