--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -3,11 +3,11 @@
 // Set your brand colors
 $green: #006838;
 $white: #ffffff;
-$black: #4d4d4d;
+$grey-dark: #4d4d4d;
 
 // Update Bulma's global variables
 $primary: $green;
-$text: $black;
+$text: $grey-dark;
 
 // Update some of Bulma's component variables
 @import "~bulma/bulma.sass";
