--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -22,6 +22,16 @@ $navbar-tab-active-border-bottom-width: 1px;
 @import "~bulma/bulma.sass";
 
 // Handcrafted CSS
+footer {
+  margin-top: auto;
+}
+
+#app-wrapper {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
 .responsive {
   max-width: 100%;
   height: auto;
