add about page; use the convention that element is responsible for padding bottom only. pb-4 between elements in the same group, pb-5 for different groups (e.g. header <-> main <-> footer)

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -55,5 +55,10 @@ footer {
   .centered {
     display: flex;
     justify-content: center;
+    align-items: center;
+  }
+
+  .centered.vertical {
+    flex-direction: column;
   }
 }
