update scss variable for better semantic understanding

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -13,7 +13,7 @@ $primary: $green;
 $text: $grey-dark;
 
 // Update some of Bulma's component variables
-$card-header-background-color: $text;
+$card-header-background-color: $grey-dark;
 $card-header-color: $white;
 $navbar-item-hover-color: $primary;
 $navbar-tab-active-color: $navbar-item-hover-color;
