add search bar to filter by location

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -38,6 +38,17 @@ a[href^="mailto"] {
   flex-direction: column;
 }
 
+#search-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+@media (min-width: $tablet) {
+  #search-wrapper {
+    justify-content: flex-end;
+  }
+}
+
 .responsive {
   max-width: 100%;
   height: auto;
