make project cards rounded

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -88,8 +88,19 @@ a[href^="mailto"] {
   justify-content: space-between;
 }
 
+.card.rounded {
+  border-radius: $box-radius;
+}
+
+.card-header {
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
+}
+
 .card-footer-item {
   justify-content: flex-start;
+  border-bottom-left-radius: inherit;
+  border-bottom-right-radius: inherit;
 }
 
 .navbar-burger.is-active {
